--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,8 +19,7 @@
     <string name="error_field_required">Este campo es requerido</string>
 
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="title_activity_control">ControlActivity</string>
-    <string name="title_activity_light">LightActivity</string>
+    <string name="title_activity_control">Controles del cuarto</string>
+    <string name="title_activity_light">Luz</string>
 
 </resources>
