--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,8 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="title_activity_control">Controles del cuarto</string>
     <string name="title_activity_light">Luz</string>
+    <string name="title_activity_lock">LockActivity</string>
+    <string name="title_activity_air">AirActivity</string>
+    <string name="title_activity_access">AccessActivity</string>
 
 </resources>
